fix:26.2 Block/Item 注册 API 重大变更 — 改用 registerBlock(Function<Props,B>)
MC 26.2 里 BlockBehaviour Properties 和 Item Properties 的 id 必须在构造时注入,
不能再通过 Supplier<T> 延迟构造。

改用新 API:
- ModBlocks:registerBlock(name, Function<Properties, Block>) — 自动注入 id
- ModItems:registerItem(name, Function<Properties, Item>) — 自动注入 id
- ModItems.registerSimpleBlockItem(name, Supplier<Block>) — 自动生成 block item

修复启动 NPE:
- Block id not set ✓
- Item id not set ✓
- Trying to access unbound value ✓